--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,11 @@ jobs:
     steps:
     - uses: actions/checkout@v3.5.3
 
+    - name: Nightly
+      run: |
+        rustup install nightly
+        rustup default nightly
+
     - name: Cargo Test
       run: cargo test
 
