--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,9 @@
 on:
   create
 
+env:
+  DO_NOT_FORMAT: true
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -15,25 +18,19 @@ jobs:
     - name: Cargo Test
       run: cargo test
 
-    - name: Install UPX
-      run: |
-        curl -L https://github.com/upx/upx/releases/download/v4.1.0/upx-4.1.0-amd64_linux.tar.xz > upx.tar.xz
-        tar -xf upx.tar.xz
-        mv upx-4.1.0-amd64_linux/upx ./upx
-
     # - uses: Swatinem/rust-cache@v2
     #   with:
     #     shared-key: "default"
     #     key: "default"
     #     cache-on-failure: "true"
     
+    - name: Build Linux
+      run: cargo build --profile workflow-dev
+    
     - name: Install Cross
       uses: taiki-e/install-action@v2
       with:
         tool: cross
-    
-    - name: Build Linux
-      run: cargo build --profile workflow-dev
     
     - name: Build Windows
       run: cross build --profile workflow-dev --target x86_64-pc-windows-gnu
@@ -45,6 +42,12 @@ jobs:
     
     # - name: Debug
     #   run: ls target/x86_64-apple-darwin/debug
+
+    - name: Install UPX
+      run: |
+        curl -L https://github.com/upx/upx/releases/download/v4.1.0/upx-4.1.0-amd64_linux.tar.xz > upx.tar.xz
+        tar -xf upx.tar.xz
+        mv upx-4.1.0-amd64_linux/upx ./upx
 
     - name: Compress
       continue-on-error: true
