--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,8 +4,6 @@ on:
 env:
   DO_NOT_FORMAT: true
   LIBTORCH_STATIC: 1
-  LIBTORCH: /home/runner/work/resume-builder/resume-builder/libtorch
-  LD_LIBRARY_PATH: /home/runner/work/resume-builder/resume-builder/lib
 
 jobs:
   build-linux:
@@ -22,7 +20,7 @@ jobs:
         curl -L https://download.pytorch.org/libtorch/cu118/libtorch-cxx11-abi-shared-with-deps-2.0.0%2Bcu118.zip > libtorch.zip
         unzip libtorch.zip
         rm libtorch.zip
-        pwd
+        export LIBTORCH=/home/runner/work/resume-builder/resume-builder/libtorch
         export LD_LIBRARY_PATH=/home/runner/work/resume-builder/resume-builder/libtorch/lib:$LD_LIBRARY_PATH
 
     - name: Cargo Check
@@ -58,8 +56,8 @@ jobs:
         curl -L https://download.pytorch.org/libtorch/cu118/libtorch-win-shared-with-deps-2.0.0%2Bcu118.zip > libtorch.zip
         unzip libtorch.zip
         rm libtorch.zip
-        pwd
-        export LD_LIBRARY_PATH=D:\a\resume-builder\resume-builder\libtorch\lib:$LD_LIBRARY_PATH
+        $Env:LIBTORCH = "X:D:\a\resume-builder\resume-builder\libtorch"
+        $Env:Path += ";X:D:\a\resume-builder\resume-builder\libtorch\lib"
 
     - name: Cargo Check
       run: cargo check
@@ -90,6 +88,9 @@ jobs:
     
     - name: Install libtorch
       run: |
+        curl -L https://download.pytorch.org/libtorch/cpu/libtorch-macos-2.0.0.zip > libtorch.zip
+        unzip libtorch.zip
+        rm libtorch.zip
         brew install pytorch jq
         export LIBTORCH=$(brew --cellar pytorch)/$(brew info --json pytorch | jq -r '.[0].installed[0].version')
         export LD_LIBRARY_PATH=${LIBTORCH}/lib:$LD_LIBRARY_PATH
