--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,16 +20,12 @@ jobs:
         curl -L https://download.pytorch.org/libtorch/cu118/libtorch-cxx11-abi-shared-with-deps-2.0.0%2Bcu118.zip > libtorch.zip
         unzip libtorch.zip
         rm libtorch.zip
-        echo "LIBTORCH=/home/runner/work/resume-builder/resume-builder/libtorch" >> "$GITHUB_ENV"
-        echo "LD_LIBRARY_PATH=/home/runner/work/resume-builder/resume-builder/libtorch/lib:$LD_LIBRARY_PATH" >> "$GITHUB_ENV"
-        echo $LIBTORCH
-        echo $LD_LIBRARY_PATH
 
     - name: Cargo Check
       run: cargo check
     
     - name: Build
-      run: cargo build --profile workflow-dev
+      run: LIBTORCH=/home/runner/work/resume-builder/resume-builder/libtorch LD_LIBRARY_PATH=/home/runner/work/resume-builder/resume-builder/libtorch/lib:$LD_LIBRARY_PATH cargo build --profile workflow-dev
 
     - name: Run UPX
       continue-on-error: true
@@ -58,15 +54,15 @@ jobs:
         curl -L https://download.pytorch.org/libtorch/cu118/libtorch-win-shared-with-deps-2.0.0%2Bcu118.zip > libtorch.zip
         unzip libtorch.zip
         rm libtorch.zip
-        $Env:LIBTORCH = "X:D:\a\resume-builder\resume-builder\libtorch"
-        $Env:Path += ";X:D:\a\resume-builder\resume-builder\libtorch\lib"
-        dir env:
 
     - name: Cargo Check
       run: cargo check
     
     - name: Build
-      run: cargo build --profile workflow-dev
+      run: |
+        $Env:LIBTORCH = "X:D:\a\resume-builder\resume-builder\libtorch"
+        $Env:Path += ";X:D:\a\resume-builder\resume-builder\libtorch\lib"
+        cargo build --profile workflow-dev
 
     - name: Run UPX
       continue-on-error: true
@@ -95,10 +91,6 @@ jobs:
         unzip libtorch.zip
         rm libtorch.zip
         brew install pytorch jq
-        echo "LIBTORCH=$(brew --cellar pytorch)/$(brew info --json pytorch | jq -r '.[0].installed[0].version')" >> "$GITHUB_ENV"
-        echo "LD_LIBRARY_PATH=${LIBTORCH}/lib:$LD_LIBRARY_PATH" >> "$GITHUB_ENV"
-        echo $LIBTORCH
-        echo $LD_LIBRARY_PATH
 
     - name: Cargo Check
       run: cargo check
@@ -107,7 +99,7 @@ jobs:
       run: cargo install cargo-bundle
     
     - name: Build
-      run: cargo bundle --profile workflow-dev
+      run: LIBTORCH=$(brew --cellar pytorch)/$(brew info --json pytorch | jq -r '.[0].installed[0].version') LD_LIBRARY_PATH=${LIBTORCH}/lib:$LD_LIBRARY_PATH" cargo bundle --profile workflow-dev
     
     - name: Release
       uses: softprops/action-gh-release@v1
