--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,7 @@ on:
 env:
   DO_NOT_FORMAT: 1
   LIBTORCH_STATIC: 1
+  LIBTORCH_USE_PYTORCH: 1
 
 jobs:
   build-linux:
@@ -16,12 +17,7 @@ jobs:
       run: rustup install nightly
     
     - name: Install libtorch
-      run: |
-        curl -L https://download.pytorch.org/libtorch/cu118/libtorch-cxx11-abi-shared-with-deps-2.0.0%2Bcu118.zip > libtorch.zip
-        unzip libtorch.zip
-        rm libtorch.zip
-        echo "LIBTORCH=/home/runner/work/resume-builder/resume-builder/libtorch" >> $GITHUB_ENV
-        echo "LD_LIBRARY_PATH=${LIBTORCH}/lib:$LD_LIBRARY_PATH" >> $GITHUB_ENV
+      run: pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118
 
     - name: Cargo Check
       run: cargo check
@@ -52,13 +48,7 @@ jobs:
       run: rustup install nightly
     
     - name: Install libtorch
-      run: |
-        curl -L https://download.pytorch.org/libtorch/cu118/libtorch-win-shared-with-deps-debug-2.0.0%2Bcu118.zip > libtorch.zip
-        unzip libtorch.zip
-        rm libtorch.zip
-        pwd
-        $Env:LIBTORCH = "D:\a\resume-builder\resume-builder\libtorch"
-        $Env:Path += ";D:\a\resume-builder\resume-builder\libtorch\lib"
+      run: pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118
 
     - name: Cargo Check
       run: cargo check
@@ -88,13 +78,7 @@ jobs:
       run: rustup install nightly
     
     - name: Install libtorch
-      run: |
-        curl -L https://download.pytorch.org/libtorch/cpu/libtorch-macos-2.0.0.zip > libtorch.zip
-        unzip libtorch.zip
-        rm libtorch.zip
-        brew install pytorch jq
-        echo "LIBTORCH=$(brew --cellar pytorch)/$(brew info --json pytorch | jq -r '.[0].installed[0].version')" >> $GITHUB_ENV
-        echo "LD_LIBRARY_PATH=${LIBTORCH}/lib:$LD_LIBRARY_PATH" >> $GITHUB_ENV
+      run: pip3 install torch torchvision torchaudio
 
     - name: Cargo Check
       run: cargo check
